src/objects/Performance_Deviation_section__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Measurement__c</fullName>
        <label>Actual Measurement</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Part_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Part Code</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>MCAR_MEPS__c.MCAR_MEPS_Enterprise_ID__c</field>
                <operation>equals</operation>
                <valueField>MCAR_MEPS__c.Manufacturer_Name__r.Name</valueField>
            </filterItems>
            <filterItems>
                <field>MCAR_MEPS__c.MCAR_Mfg_Part_Number__c</field>
                <operation>equals</operation>
                <valueField>MCAR_MEPS__c.Name</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MCAR_MEPS__c</referenceTo>
        <relationshipLabel>Performance Deviation</relationshipLabel>
        <relationshipName>Performance_Deviation_section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Product__c</fullName>
        <label>Associated Product</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Impact__c</fullName>
        <label>Business Impact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <label>Claim</label>
        <referenceTo>MCAR_Claim_Management__c</referenceTo>
        <relationshipName>Performance_Deviation_section</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Measured__c</fullName>
        <label>Date Measured</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Measurement__c</fullName>
        <label>Frequency of Measurement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measurement_Standard__c</fullName>
        <label>Measurement Standard</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Measure_Name__c</fullName>
        <label>Performance Measure Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Name_Location__c</fullName>
        <description>Shipper Name &amp; Location</description>
        <label>Shipper Name &amp; Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Destination__c</fullName>
        <description>Shipping Destination</description>
        <label>Shipping Destination</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Performance Deviation</label>
    <nameField>
        <displayFormat>PDNo-{0000}</displayFormat>
        <label>Performance Deviation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Deviation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>